# training

./: .env_example  .gitignore  .markdownlint.yaml  README.md  docker-compose.prod.yml  docker-compose.yml  基本設計書.md  環境設計書.md  要件定義書.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md
.github/workflows/: deploy-ec2.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/app/: main.py
backend/app/core/: audit.py  auth_client.py  config.py  database.py  dependencies.py  security.py  ulid.py
backend/app/models/: answer.py  assignment.py  audit_log.py  department.py  location.py  question.py  session.py  user.py
backend/app/routers/: admin_users.py  aggregations.py  answers.py  assignments.py  auth.py  departments.py  locations.py  onboarding.py  questions.py
backend/app/schemas/: aggregations.py  answer.py  assignments.py  departments.py  locations.py  questions.py  user.py
db/init/: 01_create_tables.sql
frontend/: .gitignore  Dockerfile  Dockerfile.prod  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: AdminSettings.tsx  AnswerHistory.tsx  AnswerInput.tsx  Dashboard.tsx  FirstAccess.tsx  Login.tsx  Onboarding.tsx  QuestionManage.tsx  SummaryDashboard.tsx
frontend/src/services/: api.ts
nginx/: default.conf  default.prod.conf
scripts/: ec2-bootstrap.sh
